--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="br.com.classapp.RNGetSharedPrefs">
+          package="br.com.classapp.RNSensitiveInfo">
 </manifest>
