--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
-  "name": "react-native-sensitive-info",
-  "version": "2.0.0",
-  "main": "index.android.js",
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
-  },
-  "author": {
-    "name": "ClassApp",
-    "email": "i@classapp.com.br"
-  },
-  "homepage": "https://github.com/classapp/react-native-sensitive-info",
-  "bugs": {
-    "url": "https://github.com/classapp/react-native-sensitive-info/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/classapp/react-native-sensitive-info.git"
-  },
-  "keywords": [
-    "android",
-    "shared-preferences",
-    "react-native"
-  ],
-  "license": "MIT",
-  "dependencies": {
-    "react": "^0.14.8",
-    "react-native": "^0.25.1"
-  }
+    "name": "react-native-sensitive-info",
+    "version": "2.0.1",
+    "description": "Manage information stored in Android Shared Preferences",
+    "main": "index.android.js",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/classapp/react-native-sensitive-info.git"
+    },
+    "homepage": "https://github.com/classapp/react-native-sensitive-info",
+    "bugs": {
+        "url": "https://github.com/classapp/react-native-sensitive-info/issues"
+    },
+    "keywords": [
+        "react-component",
+        "react-native",
+        "shared-preferences",
+        "android",
+        "device",
+    ],
+    "author": "ClassApp <mateus@clsp.co> (https://github.com/mCodex)",
+    "license": "MIT"
 }
