--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -121,6 +121,7 @@ android {
 
 dependencies {
     compile project(':react-native-sensitive-info')
+    compile project(':react-native-geocoder')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:0.20.1"  // From node_modules
