example updated & adding samin as contributor too

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
+#idea
+.idea
+
 # node-waf configuration
 .lock-wscript
 
