--- a/example/package.json
+++ b/example/package.json
@@ -8,5 +8,13 @@
     "react": "^16.0.0-alpha.6",
     "react-native": "^0.44.0",
     "react-native-sensitive-info": "file:../"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.0.0"
   }
 }
