--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "author": {
-    "name": "ClassApp",
-    "email": "i@classapp.com.br"
+    "name": "mCodex & ClassApp",
+    "email": "mtw.andrade@gmail.com"
   },
   "contributors": [
-    "Mateus Andrade <mateus@classapp.co>",
+    "Mateus Andrade mtw.andrade@gmail.com",
     "Samin Shams <samin@classapp.co>"
   ],
-  "homepage": "https://github.com/classapp/react-native-sensitive-info",
+  "homepage": "https://github.com/mcodex/react-native-sensitive-info",
   "bugs": {
-    "url": "https://github.com/classapp/react-native-sensitive-info/issues"
+    "url": "https://github.com/mcodex/react-native-sensitive-info/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/classapp/react-native-sensitive-info.git"
+    "url": "git://github.com/mcodex/react-native-sensitive-info.git"
   },
   "keywords": [
     "android",
