--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,1 +1,3 @@
-<manifest package="br.com.classapp.RNSensitiveInfo"></manifest>
+<manifest package="br.com.classapp.RNSensitiveInfo" xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+</manifest>
