--- a/example/package.json
+++ b/example/package.json
@@ -4,13 +4,14 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
+  "license": "MIT",
   "dependencies": {
-    "react": "16.0.0-alpha.6",
-    "react-native": "^0.44.0",
+    "react": "16.0.0",
+    "react-native": "0.49.5",
     "react-native-sensitive-info": "file:../"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.0.1",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.3.0",
