feature: handle key-permanently-invalid exception

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.3.1'
+    }
+}
+
 apply plugin: 'com.android.library'
 
 android {
@@ -9,12 +19,16 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        ndk {
-            abiFilters "armeabi-v7a", "x86"
-        }
     }
     lintOptions {
-        warning 'InvalidPackage'
+        abortOnError false
+    }
+}
+
+repositories {
+    mavenCentral()
+    maven {
+        url 'https://maven.google.com'
     }
 }
 
