--- a/example/package.json
+++ b/example/package.json
@@ -1,21 +1,29 @@
 {
   "name": "example",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
   },
-  "license": "MIT",
   "dependencies": {
-    "react": "16.0.0",
-    "react-native": "0.49.5",
+    "react": "16.6.0-alpha.8af6728",
+    "react-native": "^0.57.1",
     "react-native-sensitive-info": "file:../"
   },
   "devDependencies": {
-    "babel-eslint": "^8.0.1",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "23.6.0",
+    "eslint": "5.7.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.0.1"
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.0.1",
+    "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.48.1",
+    "react-test-renderer": "16.6.0-alpha.8af6728"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
