Pointed lib back to local FaceID description to ios

--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.2",
-    "react-native-sensitive-info": "^5.5.3"
+    "react-native-sensitive-info": "file:../"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
