added initial template and eslint configs

--- a/package.json
+++ b/package.json
@@ -30,16 +30,5 @@
     "shared-preferences",
     "react-native"
   ],
-  "license": "MIT",
-  "devDependencies": {
-    "eslint": "7.2.x",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
-    "prettier": "^2.0.5"
-  }
+  "license": "MIT"
 }
