--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -4,7 +4,7 @@ daysUntilStale: 30
 daysUntilClose: 90
 # Issues with these labels will never be considered stale
 exemptLabels:
-  - pinned
+  - 📌 pinned
   - security
 # Label to use when marking an issue as stale
 staleLabel: 🚧 stale
