changing repo homepage

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "Mateus Andrade mtw.andrade@gmail.com",
     "Samin Shams <samin@classapp.co>"
   ],
-  "homepage": "https://github.com/mcodex/react-native-sensitive-info",
+  "homepage": "https://mcodex.dev/react-native-sensitive-info/",
   "bugs": {
     "url": "https://github.com/mcodex/react-native-sensitive-info/issues"
   },
