working on example home page

--- a/example/package.json
+++ b/example/package.json
@@ -32,6 +32,7 @@
     "babel-jest": "^26.1.0",
     "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
