--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "react-native-sensitive-info",
   "version": "5.5.7",
-  "main": "RNSensitiveInfo.js",
+  "main": "build/index.js",
+  "module": "build/index.es.js",
+  "jsnext:main": "build/index.es.js",
   "types": "index.d.ts",
   "description": "react-native-sensitive-info manages all data stored in Android Shared Preferences and iOS Keychain. You can set, get and delete keys/values using simple methods.",
   "scripts": {
-    "localPublish": "yalc publish && cd example && yalc add react-native-sensitive-info --yarn && cd ..",
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "build": "rimraf -rf build && rollup -c",
+    "localPublish": "yalc publish && cd example && yalc add react-native-sensitive-info --yarn && cd .."
   },
   "author": {
     "name": "mCodex & ClassApp",
@@ -31,5 +33,30 @@
     "shared-preferences",
     "react-native"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "peerDependencies": {
+    "react-native": "*"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.4",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "prettier": "^2.0.5",
+    "react-native": "^0.63.2",
+    "rollup": "^2.23.0",
+    "rollup-plugin-peer-deps-external": "^2.2.3",
+    "rollup-plugin-typescript2": "^0.27.1",
+    "typescript": "^3.9.7"
+  }
 }
