Improved example and fixed biometric prompt
* Fixed biometric prompt crash when header/title was not provided. Now, the default is: "Unlock with your fingerprint"

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "rollup": "^2.23.0",
     "rollup-plugin-peer-deps-external": "^2.2.3",
     "rollup-plugin-typescript2": "^0.27.1",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "yalc": "^1.0.0-pre.40"
   }
 }
