--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,8 @@
-example/
-website/
-cover.png
+*
+!android/**
+!ios/**
+!windows/**
+!./package.json
+!index.d.ts
+!react-native-sensitive-info.podspec
+!build/**
