Newton JSON removed

--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "shared-preferences",
     "react-native"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "react": "^16.13.1",
+    "react-native": "^0.62.2",
+    "react-native-windows": "0.62.4"
+  }
 }
