--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,8 @@ android/local.properties
 android.yml
 *.iml
 
+windows/.vs
+windows/packages
+windows/RNSensitiveInfo/bin
+windows/RNSensitiveInfo/obj
 .DS_STORE
