--- a/package.json
+++ b/package.json
@@ -54,11 +54,13 @@
     "eslint-plugin-react": "^7.20.4",
     "eslint-plugin-react-hooks": "^4.0.8",
     "prettier": "^2.0.5",
-    "react-native": "^0.63.2",
     "rollup": "^2.23.0",
     "rollup-plugin-peer-deps-external": "^2.2.3",
     "rollup-plugin-typescript2": "^0.27.1",
     "typescript": "^3.9.7",
-    "yalc": "^1.0.0-pre.40"
+    "yalc": "^1.0.0-pre.40",
+    "react": "^16.13.1",
+    "react-native": "^0.62.2",
+    "react-native-windows": "0.62.4"
   }
 }
