--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,7 +3,17 @@ apply plugin: 'com.android.library'
 def DEFAULT_COMPILE_SDK_VERSION             = 29
 def DEFAULT_BUILD_TOOLS_VERSION             = "29.0.2"
 def DEFAULT_TARGET_SDK_VERSION              = 29
-def DEFAULT_MIN_SDK_VERSION                 = 16
+def DEFAULT_MIN_SDK_VERSION                 = 23
+
+buildscript {
+    repositories {
+        jcenter()
+        google() //in newer versions of Android Studio
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.4.1'
+    }
+}
 
 android {
     compileSdkVersion project.hasProperty('compileSdkVersion') ? project.compileSdkVersion : DEFAULT_COMPILE_SDK_VERSION
@@ -21,6 +31,11 @@ android {
     lintOptions {
         warning 'InvalidPackage'
     }
+}
+
+repositories {
+    jcenter()
+    google() //in newer versions of Android Studio
 }
 
 dependencies {
