--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,7 @@ def DEFAULT_MIN_SDK_VERSION                 = 23
 
 buildscript {
     repositories {
+        mavenCentral()
         jcenter()
         google() //in newer versions of Android Studio
     }
@@ -36,6 +37,7 @@ android {
 allprojects {
     repositories {
         maven { url "$rootDir/../node_modules/react-native/android" } // All of React Native (JS, Android binaries) is installed from npm
+        mavenCentral()
         jcenter()
         google()
     }
