--- a/example/package.json
+++ b/example/package.json
@@ -17,14 +17,14 @@
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
     "appium": "^1.18.3",
-    "react": "16.13.1",
-    "react-native": "0.63.2",
+    "react": "^17.0.1",
+    "react-native": "^0.63.4",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
     "react-native-sensitive-info": "file:.yalc/react-native-sensitive-info",
-    "react-native-windows": "^0.63.0-0",
+    "react-native-windows": "^0.63.37",
     "selenium-appium": "^0.0.15",
     "selenium-webdriver": "^4.0.0-alpha.7"
   },
