--- a/package.json
+++ b/package.json
@@ -12,6 +12,15 @@
     "prepare": "yarn build",
     "localPublish": "yalc publish && cd example && yalc add react-native-sensitive-info --yarn && cd .."
   },
+  "author": {
+    "name": "mCodex & ClassApp",
+    "email": "mtw.andrade@gmail.com"
+  },
+  "contributors": [
+    "Mateus Andrade mtw.andrade@gmail.com",
+    "Samin Shams <samin@classapp.co>"
+  ],
+  "homepage": "https://mcodex.dev/react-native-sensitive-info/",
   "keywords": [
     "android",
     "ios",
