--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-sensitive-info",
   "version": "0.1.0",
-  "description": "Descriptive",
+  "description": "..",
   "main": "./lib/module/index.js",
   "types": "./lib/typescript/src/index.d.ts",
   "exports": {
@@ -19,6 +19,7 @@
     "ios",
     "cpp",
     "nitrogen",
+    "nitro.json",
     "*.podspec",
     "react-native.config.js",
     "!ios/build",
@@ -62,36 +63,35 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.8.1",
-    "@eslint/compat": "^1.2.9",
+    "@eslint/compat": "^1.3.1",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.27.0",
-    "@evilmartians/lefthook": "^1.11.13",
-    "@react-native/babel-preset": "0.79.2",
-    "@react-native/eslint-config": "^0.79.2",
+    "@eslint/js": "^9.31.0",
+    "@evilmartians/lefthook": "^1.12.2",
+    "@react-native/babel-preset": "^0.80.1",
+    "@react-native/eslint-config": "^0.80.1",
     "@release-it/conventional-changelog": "^10.0.1",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@types/jest": "^29.5.14",
-    "@types/react": "^19.1.4",
+    "@types/jest": "^30.0.0",
+    "@types/react": "^19.1.8",
     "commitlint": "^19.8.1",
     "del-cli": "^6.0.0",
-    "eslint": "^9.27.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.0",
-    "jest": "^29.7.0",
-    "nitro-codegen": "^0.25.2",
-    "prettier": "^3.5.3",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.2",
+    "jest": "^30.0.4",
+    "nitro-codegen": "^0.26.4",
+    "prettier": "^3.6.2",
     "react": "19.1.0",
-    "react-native": "0.79.2",
-    "react-native-builder-bob": "^0.40.11",
-    "react-native-nitro-modules": "^0.25.2",
-    "release-it": "^19.0.2",
-    "turbo": "^2.5.3",
-    "typescript": "5.5.x"
+    "react-native": "^0.80.1",
+    "react-native-builder-bob": "^0.40.12",
+    "react-native-nitro-modules": "^0.26.4",
+    "release-it": "^19.0.4",
+    "turbo": "^2.5.5",
+    "typescript": "^5.8.3"
   },
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "react-native-nitro-modules": "^0.25.2"
+    "react-native-nitro-modules": "^0.26.4"
   },
   "workspaces": [
     "example"
@@ -163,6 +163,6 @@
   "create-react-native-library": {
     "languages": "kotlin-swift",
     "type": "nitro-module",
-    "version": "0.50.3"
+    "version": "0.51.1"
   }
 }
