feat: Implement secure storage using EncryptedSharedPreferences for Android
- Updated CMakeLists.txt to link additional libraries.
- Enhanced build.gradle to include androidx.security:security-crypto for secure storage.
- Modified gradle.properties to update Kotlin and SDK versions.
- Refactored SensitiveInfo.kt to utilize EncryptedSharedPreferences for secure data storage.
- Created SensitiveInfoPackage.kt for module registration.
- Updated example app to demonstrate secure storage features with a comprehensive UI.
- Added performance testing and demo data loading functionalities in the example app.
- Improved iOS implementation in SensitiveInfo.swift for secure storage using Keychain.
- Updated package.json version to 6.0.0 and adjusted dependencies.
- Added unit tests for the secure storage API.

--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -16,7 +16,7 @@ include_directories("src/main/cpp" "../cpp")
 
 find_library(LOG_LIB log)
 
-# Link all libraries together
+# Link additional libraries
 target_link_libraries(
         ${PACKAGE_NAME}
         ${LOG_LIB}
