--- a/android/build.gradle
+++ b/android/build.gradle
@@ -128,5 +128,9 @@ dependencies {
 
   // Secure storage support
   implementation "androidx.security:security-crypto:1.0.0"
+  
+  // Biometric authentication support
+  implementation "androidx.biometric:biometric:1.1.0"
+  implementation "androidx.fragment:fragment-ktx:1.6.2"
 }
 
