feat: Add SecurityCapabilitiesDemo component and integrate security capabilities checks
- Updated package.json to include new dependencies for navigation and security context.
- Introduced SecurityCapabilitiesDemo component to display device security capabilities and test smart fallback functionality.
- Enhanced App component to include SecurityCapabilitiesDemo.
- Implemented getSecurityCapabilities function to retrieve device security features.
- Modified iOS SensitiveInfo.swift to support smart fallback for security levels.
- Updated index.ts to export new security capabilities function.

--- a/example/package.json
+++ b/example/package.json
@@ -10,9 +10,14 @@
     "build:ios": "react-native build-ios --mode Debug"
   },
   "dependencies": {
+    "@bottom-tabs/react-navigation": "^0.9.2",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
     "react": "19.0.0",
     "react-native": "0.79.x",
-    "react-native-nitro-modules": "^0.26.4"
+    "react-native-nitro-modules": "^0.26.4",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
