--- a/example/package.json
+++ b/example/package.json
@@ -10,30 +10,25 @@
     "build:ios": "react-native build-ios --mode Debug"
   },
   "dependencies": {
-    "@bottom-tabs/react-navigation": "^0.9.2",
-    "@react-navigation/native": "^7.1.14",
-    "@react-navigation/native-stack": "^7.3.21",
-    "react": "19.0.0",
+    "react": "19.1.1",
     "react-native": "0.79.x",
-    "react-native-nitro-modules": "^0.26.4",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.13.1"
+    "react-native-nitro-modules": "^0.27.3"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
-    "@babel/runtime": "^7.27.6",
-    "@react-native-community/cli": "19.1.0",
+    "@babel/runtime": "^7.28.2",
+    "@react-native-community/cli": "19.1.1",
     "@react-native-community/cli-platform-android": "18.0.0",
     "@react-native-community/cli-platform-ios": "18.0.0",
     "@react-native/babel-preset": "0.79.x",
     "@react-native/metro-config": "0.79.x",
     "@react-native/typescript-config": "0.79.x",
-    "@types/react": "^19.1.8",
-    "react-native-builder-bob": "^0.40.12",
+    "@types/react": "^19.1.9",
+    "react-native-builder-bob": "^0.40.13",
     "react-native-monorepo-config": "^0.1.9"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=22"
   }
 }
