feat: Add biometric authentication support for Android and iOS
- Implemented AndroidBiometricModule and AndroidBiometricPackage for biometric authentication on Android.
- Created TransparentBiometricActivity to handle biometric prompts in a transparent manner.
- Added HybridBiometricPromptView and HybridBiometricPromptViewManager for React Native integration.
- Updated SensitiveInfo class to include biometric authentication checks before accessing sensitive data.
- Enhanced iOS support with LocalAuthenticationModule and HybridBiometricPromptView for biometric prompts.
- Updated README.md with troubleshooting tips for Face ID on iOS and biometric prompts on Android.
- Added styles for transparent activity in Android.
- Updated Podfile.lock and Info.plist for necessary permissions and dependencies.
- Modified SecurityDemo component to utilize new biometric authentication features.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -132,5 +132,8 @@ dependencies {
   // Biometric authentication support
   implementation "androidx.biometric:biometric:1.1.0"
   implementation "androidx.fragment:fragment-ktx:1.6.2"
+  
+  // Material Components for theme parent (Theme.MaterialComponents.*)
+  implementation "com.google.android.material:material:1.12.0"
 }
 
