--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,28 +1,42 @@
 apply plugin: 'com.android.library'
 
-def DEFAULT_COMPILE_SDK_VERSION             = 27
-def DEFAULT_BUILD_TOOLS_VERSION             = "28.0.2"
-def DEFAULT_TARGET_SDK_VERSION              = 25
-def DEFAULT_MIN_SDK_VERSION                 = 16
+def DEFAULT_COMPILE_SDK_VERSION = 33
+def DEFAULT_TARGET_SDK_VERSION = 33
+def DEFAULT_MIN_SDK_VERSION = 21
 
 android {
     compileSdkVersion project.hasProperty('compileSdkVersion') ? project.compileSdkVersion : DEFAULT_COMPILE_SDK_VERSION
-    buildToolsVersion project.hasProperty('buildToolsVersion') ? project.buildToolsVersion : DEFAULT_BUILD_TOOLS_VERSION
 
     defaultConfig {
         minSdkVersion project.hasProperty('minSdkVersion') ? project.minSdkVersion : DEFAULT_MIN_SDK_VERSION
         targetSdkVersion project.hasProperty('targetSdkVersion') ? project.targetSdkVersion : DEFAULT_TARGET_SDK_VERSION
         versionCode 1
         versionName "1.0"
-        ndk {
-            abiFilters "armeabi-v7a", "x86"
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled false
         }
     }
+
     lintOptions {
-        warning 'InvalidPackage'
+        disable 'GradleCompatible'
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
+repositories {
+    google()
+    mavenCentral()
+}
+
 dependencies {
-    implementation 'com.facebook.react:react-native:+'
+    //noinspection GradleDynamicVersion
+    implementation "com.facebook.react:react-native:+"
+    implementation "androidx.appcompat:appcompat:1.4.2"
 }
