--- a/android/build.gradle
+++ b/android/build.gradle
@@ -137,6 +137,8 @@ dependencies {
 
   // Add a dependency on NitroModules
   implementation project(":react-native-nitro-modules")
+
+  implementation "androidx.biometric:biometric:1.1.0"
 }
 
 if (isNewArchitectureEnabled()) {
