--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-sensitive-info",
-  "version": "6.0.0",
+  "version": "6.0.0-rc.1",
   "description": "react-native-sensitive-info is a react native package built with Nitro",
   "main": "./lib/commonjs/index.js",
   "module": "./lib/module/index.js",
