Add example app UI and update biometric support
Introduces a comprehensive example app UI in App.tsx to demonstrate secure storage and biometric flows, including diagnostics and entry management. Updates documentation with new usage, permissions, and migration notes. Adds Android and iOS biometric permissions to manifests, refines type definitions for options, and improves codegen and type safety for synchronizable options. Also updates codegen config and Android build.gradle for TurboModule support.

--- a/example/ios/SensitiveInfoExample/Info.plist
+++ b/example/ios/SensitiveInfoExample/Info.plist
@@ -34,6 +34,8 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Authenticate before revealing sensitive demo information.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>UILaunchStoryboardName</key>
