--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,6 +21,11 @@ apply plugin: "kotlin-android"
 
 apply plugin: "com.facebook.react"
 
+react {
+  libraryName = "SensitiveInfo"
+  codegenJavaPackageName = "com.sensitiveinfo"
+}
+
 def getExtOrIntegerDefault(name) {
   return rootProject.ext.has(name) ? rootProject.ext.get(name) : (project.properties["SensitiveInfo_" + name]).toInteger()
 }
