Refactor module for TurboModule, remove view, improve error handling
Migrates the Android and iOS modules to a TurboModule-ready architecture, removing the legacy SensitiveInfoView and related files. Adds improved error logging and handling on both platforms, updates synchronizable option mapping, and consolidates the JS API into a single entry point. Updates the example app and project files for new architecture compatibility and better platform support.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,7 +22,7 @@ apply plugin: "kotlin-android"
 apply plugin: "com.facebook.react"
 
 react {
-  libraryName = "SensitiveInfo"
+  libraryName = "NativeSensitiveInfoSpec"
   codegenJavaPackageName = "com.sensitiveinfo"
 }
 
